Update landing content

--- a/sage50UK_stream_integration/landing.html
+++ b/sage50UK_stream_integration/landing.html
@@ -97,7 +97,7 @@
   <main id="top">
     <section class="hero">
       <div>
-        <div class="tag">Integrate Sage 50 with Stream</div>
+        <div class="tag">Integrate Sage 50 with Stream - YOUR MOTHER</div>
         <h1>Sage 50 &#8596; Stream Integration</h1>
         <p>Automate secure order uploads and delivery tracking updates between Sage 50 and Stream. Keep track of stock, logistics and finance in sync and get orders on the road faster.</p>
         <div class="actions">
@@ -181,7 +181,7 @@
     <section>
       <h2>Testimonial</h2>
       <div class="testimonial">
-        <blockquote>"This integration has streamlined our delivery process and saved hours each week. Planning starts instantly, and our Sage data always matches what is happening on the road."</blockquote>
+        <blockquote>"After considering upgrading to Sage 200 for quite sometime, I struggled to justify the added benefits with the cost. Streamline came along and did just that with Sage50."</blockquote>
         <cite>John Doe, Operations Manager</cite>
       </div>
     </section>
