--- a/sage50UK_stream_integration/landing.html
+++ b/sage50UK_stream_integration/landing.html
@@ -97,7 +97,7 @@
   <main id="top">
     <section class="hero">
       <div>
-        <div class="tag">Integrate Sage 50 with Stream - YOUR MOTHER</div>
+        <div class="tag">Integrate Sage 50 with Stream - BOMBCLART</div>
         <h1>Sage 50 &#8596; Stream Integration</h1>
         <p>Automate secure order uploads and delivery tracking updates between Sage 50 and Stream. Keep track of stock, logistics and finance in sync and get orders on the road faster.</p>
         <div class="actions">
