Tighten hero panel bullets for Stream + Sage users

--- a/sage50UK_stream_integration/landing.html
+++ b/sage50UK_stream_integration/landing.html
@@ -97,18 +97,21 @@
   <main id="top">
     <section class="hero">
       <div>
-        <div class="tag">Integrate Sage 50 with Stream - BOMBCLART</div>
+        <div class="tag">Integrate Sage 50 with Stream</div>
         <h1>Sage 50 &#8596; Stream Integration</h1>
-        <p>Automate secure order uploads and delivery tracking updates between Sage 50 and Stream. Keep track of stock, logistics and finance in sync and get orders on the road faster.</p>
+        <p>Automate secure order uploads and delivery tracking updates between Sage 50 and Stream. Keep stock, logistics and finance in sync and get orders on the road faster.</p>
         <div class="actions">
           <a class="btn btn-primary" href="#contact">Book a demo</a>
           <a class="btn btn-secondary" href="stream_order_creation.html">See order creation</a>
         </div>
       </div>
       <div class="panel">
-        <h3 style="margin-top:0;">What this integration does</h3>
-        <p>Sales orders flow directly from Sage 50 into Stream's TMS via secure API calls so planning starts immediately. Delivery progress and tracking references return to Sage 50 automatically, keeping your back-office view aligned with what is happening on the road.</p>
-        <p style="margin-bottom:0;">Exception handling is transparent: errors are logged so data issues can be resolved quickly.</p>
+        <h3 style="margin-top:0;">3 things Stream + Sage 50 users care about</h3>
+        <ul style="margin:0 0 0 18px; padding:0; color:#0f172a; line-height:1.5;">
+          <li>Orders raised in Sage 50 push straight into Stream via secure API, so routing and planning can start immediately without rekeying.</li>
+          <li>Stream tracking links and delivery confirmations drop back into Sage 50 automatically, keeping customer service and accounts in sync.</li>
+          <li>Any failed uploads are logged clearly, so you see issues fast and keep orders flowing.</li>
+        </ul>
       </div>
     </section>
 
