--- a/sage50UK_stream_integration/index.html
+++ b/sage50UK_stream_integration/index.html
@@ -60,12 +60,12 @@
     .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 18px; }
     .feature-card, .install-card { background: white; border-radius: var(--radius); padding: 20px; border: 1px solid rgba(15, 23, 42, 0.08); box-shadow: 0 12px 28px rgba(15, 23, 42, 0.08); transition: transform 0.15s ease, box-shadow 0.15s ease; }
     .feature-card:hover, .install-card:hover { transform: translateY(-4px); box-shadow: 0 16px 36px rgba(15, 23, 42, 0.12); }
-    .icon { width: 50px; height: 50px; border-radius: 14px; display: inline-flex; align-items: center; justify-content: center; font-weight: 800; color: white; margin-bottom: 12px; background: linear-gradient(145deg, var(--sage), var(--stream)); }
+    .icon { width: 46px; height: 46px; border-radius: 14px; display: inline-flex; align-items: center; justify-content: center; font-weight: 800; color: white; margin-bottom: 12px; background: linear-gradient(145deg, var(--sage), var(--stream)); }
     .icon i { font-size: 18px; }
     .feature-card h3, .install-card h3 { margin: 4px 0 8px; font-size: 18px; color: var(--midnight); }
 
     .testimonial { background: linear-gradient(135deg, rgba(31, 122, 255, 0.14), rgba(15, 155, 80, 0.12)); border-radius: var(--radius); padding: 24px; border: 1px solid rgba(15, 23, 42, 0.1); box-shadow: var(--shadow); position: relative; overflow: hidden; }
-    .testimonial::after { content: "\\201C"; font-size: 120px; color: rgba(255, 255, 255, 0.4); position: absolute; top: -24px; right: 24px; font-family: "Space Grotesk", "Manrope", sans-serif; }
+    .testimonial::after {font-size: 120px; color: rgba(255, 255, 255, 0.4); position: absolute; top: -24px; right: 24px; font-family: "Space Grotesk", "Manrope", sans-serif; }
     blockquote { margin: 0; font-size: 20px; font-style: italic; color: #0f172a; }
     cite { display: block; margin-top: 12px; font-weight: 700; color: var(--midnight); }
 
@@ -110,9 +110,10 @@
       <div class="panel">
         <h3 style="margin-top:0;">What we solve</h3>
         <ul style="margin:0 0 0 18px; padding:0; color:#0f172a; line-height:1.5;">
+          <li>Increase efficiency and unlock all the features Stream has to offer.</li>
           <li>No need to spend big upgrading to Sage 200.</li>
           <li>No need for costly third party stock systems</li>
-          <li>Increase efficiency and unlock all the features Stream has to offer.</li>
+          <li>Get set up in hours, not weeks.</li>
         </ul>
       </div>
     </section>
@@ -156,17 +157,16 @@
         <div class="feature-card">
           <div class="icon"><i class="fa-solid fa-right-left"></i></div>
           <h3>2-Way Communication</h3>
-          <p>Keep fields aligned when events happen: tracking link into Sage on order create, required date updates, notes sync, and auto emails when SOs import without a customer order number.</p>
+          <p>Keep fields aligned when events happen: tracking link into Sage on order create, required date updates, notes sync etc.</p>
           <a class="btn btn-secondary" href="#contact">View details / discuss</a>
         </div>
         <div class="feature-card">
           <div class="icon"><i class="fa-solid fa-file-invoice-dollar"></i></div>
           <h3>Invoicing & Automations</h3>
-          <p>Automate invoicing when orders complete, trigger stock ordering, and log all data/files in the cloud with spreadsheet traces for full auditability.</p>
+          <p>Automate invoicing when orders complete, trigger stock ordering, automate sending emails and more.</p>
           <a class="btn btn-secondary" href="#contact">View details / discuss</a>
         </div>
       </div>
-
       <div class="grid" style="margin-top:18px;">
         <div class="feature-card">
           <div class="icon"><i class="fa-solid fa-clipboard-list"></i></div>
@@ -184,10 +184,20 @@
     </section>
 
     <section>
-      <h2>Testimonial</h2>
+      <h2>Testimonials</h2>
+      <div class="testimonial" style="margin-bottom:16px;">
+        <blockquote>
+          <p style="margin:0 0 10px;">“We nearly upgraded to Sage 200 but couldn't justify the cost. Streamline unlocked Sage 50 instead—orders hit Stream instantly and autoplan means no more waiting for uploads.”</p>
+          <p style="margin:0;">“Highly recommend Streamline Integrations to any Sage 50 + Stream operation.”</p>
+        </blockquote>
+        <cite>Dimitri, Managing Director</cite>
+      </div>
       <div class="testimonial">
-        <blockquote>"After considering upgrading to Sage 200 for quite sometime, I struggled to justify the added benefits with the cost. Streamline came along and did just that with Sage50."</blockquote>
-        <cite>John Doe, Operations Manager</cite>
+        <blockquote>
+          <p style="margin:0 0 10px;">“As an administrator, the order form cut so much email back-and-forth with customers, and automatic tracking updates mean less chasing.”</p>
+          <p style="margin:0;">“Issues surface quickly and get fixed fast, so I spend more time helping customers and less on data entry.”</p>
+        </blockquote>
+        <cite>Sarah, Customer Operations Administrator</cite>
       </div>
     </section>
 
@@ -208,7 +218,7 @@
     </section>
 
     <section id="contact">
-      <h2>Contact / Call to Action</h2>
+      <h2>Get in Touch</h2>
       <div class="cta-card">
         <div>
           <p style="margin-top:0;">Ready to see it in action? Contact us for a demo or more information. We will tailor the setup approach—professional service, automated installer, or DIY guidance—to suit your team, with the same secure API foundation across every option.</p>
