--- a/sage50UK_stream_integration/landing.html
+++ b/sage50UK_stream_integration/landing.html
@@ -60,7 +60,7 @@
     .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 18px; }
     .feature-card, .install-card { background: white; border-radius: var(--radius); padding: 20px; border: 1px solid rgba(15, 23, 42, 0.08); box-shadow: 0 12px 28px rgba(15, 23, 42, 0.08); transition: transform 0.15s ease, box-shadow 0.15s ease; }
     .feature-card:hover, .install-card:hover { transform: translateY(-4px); box-shadow: 0 16px 36px rgba(15, 23, 42, 0.12); }
-    .icon { width: 50px; height: 50px; border-radius: 14px; display: inline-flex; align-items: center; justify-content: center; font-weight: 800; color: white; margin-bottom: 12px; background: linear-gradient(145deg, var(--sage), var(--stream)); }
+    .icon { width: 46px; height: 46px; border-radius: 14px; display: inline-flex; align-items: center; justify-content: center; font-weight: 800; color: white; margin-bottom: 12px; background: linear-gradient(145deg, var(--sage), var(--stream)); }
     .icon i { font-size: 18px; }
     .feature-card h3, .install-card h3 { margin: 4px 0 8px; font-size: 18px; color: var(--midnight); }
 
@@ -110,9 +110,10 @@
       <div class="panel">
         <h3 style="margin-top:0;">What we solve</h3>
         <ul style="margin:0 0 0 18px; padding:0; color:#0f172a; line-height:1.5;">
+          <li>Increase efficiency and unlock all the features Stream has to offer.</li>
           <li>No need to spend big upgrading to Sage 200.</li>
           <li>No need for costly third party stock systems</li>
-          <li>Increase efficiency and unlock all the features Stream has to offer.</li>
+          <li>Get set up in hours, not weeks.</li>
         </ul>
       </div>
     </section>
@@ -156,7 +157,7 @@
         <div class="feature-card">
           <div class="icon"><i class="fa-solid fa-right-left"></i></div>
           <h3>2-Way Communication</h3>
-          <p>Keep fields aligned when events happen: tracking link into Sage on order create, required date updates, notes sync, and auto emails when SOs import without a customer order number.</p>
+          <p>Keep fields aligned when events happen: tracking link into Sage on order create, required date updates, notes sync etc.</p>
           <a class="btn btn-secondary" href="#contact">View details / discuss</a>
         </div>
         <div class="feature-card">
@@ -166,7 +167,6 @@
           <a class="btn btn-secondary" href="#contact">View details / discuss</a>
         </div>
       </div>
-
       <div class="grid" style="margin-top:18px;">
         <div class="feature-card">
           <div class="icon"><i class="fa-solid fa-clipboard-list"></i></div>
@@ -184,14 +184,20 @@
     </section>
 
     <section>
-      <h2>Testimonial</h2>
-      <div class="testimonial">
+      <h2>Testimonials</h2>
+      <div class="testimonial" style="margin-bottom:16px;">
         <blockquote>
-          <p style="margin:0 0 10px;">“We nearly upgraded to Sage 200 but couldn’t justify the cost. Streamline unlocked Sage 50 instead—orders hit Stream instantly and autoplan means no more waiting for uploads.”</p>
-          <p style="margin:0 0 10px;">“The custom order form cut email back-and-forth with customers, and any issues get fixed fast.”</p>
+          <p style="margin:0 0 10px;">“We nearly upgraded to Sage 200 but couldn't justify the cost. Streamline unlocked Sage 50 instead—orders hit Stream instantly and autoplan means no more waiting for uploads.”</p>
           <p style="margin:0;">“Highly recommend Streamline Integrations to any Sage 50 + Stream operation.”</p>
         </blockquote>
         <cite>Dimitri, Managing Director</cite>
+      </div>
+      <div class="testimonial">
+        <blockquote>
+          <p style="margin:0 0 10px;">“As an administrator, the order form cut so much email back-and-forth with customers, and automatic tracking updates mean less chasing.”</p>
+          <p style="margin:0;">“Issues surface quickly and get fixed fast, so I spend more time helping customers and less on data entry.”</p>
+        </blockquote>
+        <cite>Sarah, Customer Operations Administrator</cite>
       </div>
     </section>
 
@@ -212,7 +218,7 @@
     </section>
 
     <section id="contact">
-      <h2>Contact / Call to Action</h2>
+      <h2>Get in Touch</h2>
       <div class="cta-card">
         <div>
           <p style="margin-top:0;">Ready to see it in action? Contact us for a demo or more information. We will tailor the setup approach—professional service, automated installer, or DIY guidance—to suit your team, with the same secure API foundation across every option.</p>
