--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <h1>The Ultimate Sage 50 and Stream Integration</h1>
         <p>Automate secure order uploads and delivery tracking updates between Sage 50 and Stream. Keep stock, logistics and finance in sync and get orders on the road faster.</p>
         <div class="actions">
-          <a class="btn btn-primary" href="#contact">Book a demo</a>
+          <a class="btn btn-primary" href="#calendly">Book a demo</a>
           <a class="btn btn-secondary" href="stream_order_creation.html">See order creation</a>
         </div>
       </div>
@@ -234,7 +234,8 @@
         <div>
           <p style="margin-top:0;">Ready to see it in action? Contact us for a demo or more information. We will tailor the setup approach—professional service, automated installer, or DIY guidance—to suit your team, with the same secure API foundation across every option.</p>
           <p>Email: <a href="mailto:matthew.n.77@gmail.com">matthew.n.77@gmail.com</a><br>
-             Phone: <a href="tel:+447868258209">+447868258209</a></p>
+             Phone: <a href="tel:+447868258209">+44 7868 258 209</a></p>
+          <p><a class="btn btn-primary" href="#calendly">Request a demo via Calendly</a></p>
         </div>
         <form>
           <div>
@@ -251,6 +252,12 @@
           </div>
           <button class="btn btn-primary" type="submit">Request a demo</button>
         </form>
+      </div>
+      <div id="calendly" style="margin-top:18px;">
+        <!-- Calendly inline widget begin -->
+        <div class="calendly-inline-widget" data-url="https://calendly.com/matthew-sage50streamintegration/30min?hide_gdpr_banner=1" style="min-width:320px;height:700px;"></div>
+        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+        <!-- Calendly inline widget end -->
       </div>
     </section>
   </main>
