--- a/single_stock_location.html
+++ b/single_stock_location.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Single Stock Location | Sage 50 ↔ Stream</title>
+  <title>Stock | Sage 50 ↔ Stream</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
@@ -35,7 +35,7 @@
 </head>
 <body>
   <header>
-    <div style="font-weight:800; font-family:'Space Grotesk','Manrope',sans-serif; color:var(--midnight);">Single Stock Location</div>
+    <div style="font-weight:800; font-family:'Space Grotesk','Manrope',sans-serif; color:var(--midnight);">Live Stock System</div>
     <nav>
       <a href="landing.html">Back</a>
     </nav>
@@ -43,9 +43,9 @@
 
   <main class="hero">
     <div class="tag">Package</div>
-    <h1>Single Stock Location (Starter)</h1>
+    <h1>Stock - As it happens</h1>
     <h2 style="margin-top:0;">Overview</h2>
-    <p>Build a live, single or multi-warehouse stock system with Sage 50, Stream, and Zynk automation. Secure APIs move orders between Sage 50 and Stream, and stock movements stay in sync without manual entry.</p>
+    <p>Have  a live, single or multi-warehouse stock system with Sage 50 and Stream. Keep track of what's really in your warehouse without needing to learn anything new.</p>
 
     <h2>What you get</h2>
     <div class="grid">
@@ -57,7 +57,7 @@
       <div class="card">
         <div class="icon"><i class="fa-solid fa-file-invoice"></i></div>
         <h3>Stream to Sage POs</h3>
-        <p>Purchase orders raised in Stream are received into Sage 50 automatically.</p>
+        <p>Purchase orders are uploaded to stream via the API. Once goods are recieved they are completed on Sage 50 automatically.</p>
       </div>
       <div class="card">
         <div class="icon"><i class="fa-solid fa-bell"></i></div>
@@ -72,7 +72,7 @@
       <div class="card">
         <div class="icon"><i class="fa-solid fa-box-open"></i></div>
         <h3>Goods-In setup</h3>
-        <p>Stream methods for goods-in plus visibility of POs, warehouse actions, and GRNs.</p>
+        <p>Stream methods for goods-in plus visibility of POs, warehouse actions, and Goods Received Notes.</p>
       </div>
       <div class="card">
         <div class="icon"><i class="fa-solid fa-clock"></i></div>
@@ -104,10 +104,6 @@
       <a class="btn btn-primary" href="landing.html#contact">Talk about this package</a>
       <a class="btn btn-secondary" href="stream_order_creation.html">See order creation flow</a>
     </div>
-
-    <h2 id="contact">Next steps</h2>
-    <p>Email: <a href="mailto:matthew.n.77@gmail.com">matthew.n.77@gmail.com</a> · Phone: <a href="tel:+447868258209">+44 7868 258 209</a></p>
-    <p>We can tailor the scope, add logging, or extend to multi-location when you are ready.</p>
   </main>
 
   <footer>
