Sync latest landing and stock pages

--- a/sage50UK_stream_integration/landing.html
+++ b/sage50UK_stream_integration/landing.html
@@ -232,8 +232,8 @@
       <h2>Get in Touch</h2>
       <div class="cta-card">
         <div>
-          <p style="margin-top:0;">Ready to see it in action? Contact us for a demo or more information. We will tailor the setup approach—professional service, automated installer, or DIY guidance—to suit your team, with the same secure API foundation across every option.</p>
-          <p>Email: <a href="mailto:matthew.n.77@gmail.com">matthew.n.77@gmail.com</a><br>
+          <p style="margin-top:0;">Ready to see it in action? Contact us for a demo or more information. From here We'll be able to understand your business and needs better and tailor the approach to suit you.</p>
+          <p>Email: <a href="mailto:matthew@sage50streamintegration.co.uk">matthew.n.77@gmail.com</a><br>
              Phone: <a href="tel:+447868258209">+447868258209</a></p>
         </div>
         <form>
